syntax = "proto3";

option java_multiple_files = true;
option java_package = "ca.stevenskelton.examples.realtimeziohubgrpc";
option java_outer_classname = "SyncServiceProto";
option objc_class_prefix = "SyncService";

package grpc;

message Data {
  uint32 id = 1;
  string etag = 2;
  string field1 = 3;
}

service SyncService {
  rpc BidirectionalStream (stream SyncRequest) returns (stream SyncResponse);
}

message SyncRequest {

  message Subscribe {
    uint32 id = 1;
    string previous_etag = 3;
  }

  message Unsubscribe {
    uint32 id = 1;
    bool all = 2;
  }

  repeated Subscribe subscribes = 1;
  repeated Unsubscribe unsubscribes = 2;
}

message SyncResponse {
  Data data = 1;
  enum State {
    UNCHANGED = 0;
    UPDATED = 1;
    LOADING = 2;
    UNSUBSCRIBED = 3;
    NOT_SUBSCRIBED = 4;
    NOT_FOUND = 5;
  }
  State state = 2;
}
